--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 <a href="#projects" class="btn-primary">View Projects</a>
                 <a href="#contact" class="btn-outline">Contact Me</a>
                 <!-- CHANGE RESUME FILE-->
-                <a href="./attendence letter.pdf" class="btn-glass">Download My Resume</a>
+                <!-- <a href="./attendence letter.pdf" class="btn-glass">Download My Resume</a> -->
+                  <a href="#" download="AYub_Bashir_Resume.pdf" class="btn-glass">Download Resume</a>
               </div>
             </div>
           </div>
